// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`database secret create a database secret 1`] = `
"{
  "data": {
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    },
    "aws_secretsmanager_random_password": {
      "Secret_RandomPassword_01FCD53F": {
        "exclude_characters": " %+~\`#$&*()|[]{}:;<>?!'/@\\"\\\\",
        "exclude_lowercase": false,
        "exclude_numbers": false,
        "exclude_punctuation": false,
        "exclude_uppercase": false,
        "include_space": false,
        "password_length": 30,
        "require_each_included_type": true
      }
    }
  },
  "provider": {
    "aws": [
      {
        "region": "us-east-1"
      }
    ]
  },
  "resource": {
    "aws_secretsmanager_secret": {
      "Secret_A720EF05": {
        "description": "Generated by the CDK for stack: MyStack",
        "name": "MyStackSecret03F6D6E7",
        "tags": {
          "Name": "Test-Secret",
          "grid:EnvironmentName": "Test",
          "grid:UUID": "a123e4567-e89b-12d3"
        }
      }
    },
    "aws_secretsmanager_secret_version": {
      "Secret_SecretVersion_1CCEE6BD": {
        "secret_id": "\${aws_secretsmanager_secret.Secret_A720EF05.arn}",
        "secret_string": "\${jsonencode({\\"username\\" = \\"admin-username\\", \\"password\\" = data.aws_secretsmanager_random_password.Secret_RandomPassword_01FCD53F.random_password})}"
      }
    }
  },
  "terraform": {
    "backend": {
      "http": {
        "address": "http://localhost:3000"
      }
    },
    "required_providers": {
      "aws": {
        "source": "hashicorp/aws",
        "version": "6.52.0"
      }
    }
  }
}"
`;

exports[`database secret create a database secret with a database name and secret name 1`] = `
"{
  "data": {
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    },
    "aws_secretsmanager_random_password": {
      "Secret_RandomPassword_01FCD53F": {
        "exclude_characters": " %+~\`#$&*()|[]{}:;<>?!'/@\\"\\\\",
        "exclude_lowercase": false,
        "exclude_numbers": false,
        "exclude_punctuation": false,
        "exclude_uppercase": false,
        "include_space": false,
        "password_length": 30,
        "require_each_included_type": true
      }
    }
  },
  "provider": {
    "aws": [
      {
        "region": "us-east-1"
      }
    ]
  },
  "resource": {
    "aws_secretsmanager_secret": {
      "Secret_A720EF05": {
        "description": "Generated by the CDK for stack: MyStack",
        "name": "admin-secret",
        "tags": {
          "Name": "Test-Secret",
          "grid:EnvironmentName": "Test",
          "grid:UUID": "a123e4567-e89b-12d3"
        }
      }
    },
    "aws_secretsmanager_secret_version": {
      "Secret_SecretVersion_1CCEE6BD": {
        "secret_id": "\${aws_secretsmanager_secret.Secret_A720EF05.arn}",
        "secret_string": "\${jsonencode({\\"username\\" = \\"admin-username\\", \\"dbname\\" = \\"admindb\\", \\"password\\" = data.aws_secretsmanager_random_password.Secret_RandomPassword_01FCD53F.random_password})}"
      }
    }
  },
  "terraform": {
    "backend": {
      "http": {
        "address": "http://localhost:3000"
      }
    },
    "required_providers": {
      "aws": {
        "source": "hashicorp/aws",
        "version": "6.52.0"
      }
    }
  }
}"
`;

exports[`database secret with master secret 1`] = `
"{
  "data": {
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    },
    "aws_secretsmanager_random_password": {
      "MasterSecret_RandomPassword_726D0EAF": {
        "exclude_characters": " %+~\`#$&*()|[]{}:;<>?!'/@\\"\\\\",
        "exclude_lowercase": false,
        "exclude_numbers": false,
        "exclude_punctuation": false,
        "exclude_uppercase": false,
        "include_space": false,
        "password_length": 30,
        "require_each_included_type": true
      },
      "UserSecret_RandomPassword_B6C8E79C": {
        "exclude_characters": "\\"@/\\\\",
        "exclude_lowercase": false,
        "exclude_numbers": false,
        "exclude_punctuation": false,
        "exclude_uppercase": false,
        "include_space": false,
        "password_length": 30,
        "require_each_included_type": true
      }
    }
  },
  "provider": {
    "aws": [
      {
        "region": "us-east-1"
      }
    ]
  },
  "resource": {
    "aws_secretsmanager_secret": {
      "MasterSecret_A11BF785": {
        "description": "Generated by the CDK for stack: MyStack",
        "name": "MyStackMasterSecretC87AAB3B",
        "tags": {
          "Name": "Test-MasterSecret",
          "grid:EnvironmentName": "Test",
          "grid:UUID": "a123e4567-e89b-12d3"
        }
      },
      "UserSecret_0463E4F5": {
        "description": "Generated by the CDK for stack: MyStack",
        "name": "MyStackUserSecret34D56C31",
        "tags": {
          "Name": "Test-UserSecret",
          "grid:EnvironmentName": "Test",
          "grid:UUID": "a123e4567-e89b-12d3"
        }
      }
    },
    "aws_secretsmanager_secret_version": {
      "MasterSecret_SecretVersion_7D1EE0F8": {
        "secret_id": "\${aws_secretsmanager_secret.MasterSecret_A11BF785.arn}",
        "secret_string": "\${jsonencode({\\"username\\" = \\"master-username\\", \\"password\\" = data.aws_secretsmanager_random_password.MasterSecret_RandomPassword_726D0EAF.random_password})}"
      },
      "UserSecret_SecretVersion_F50AAE6E": {
        "secret_id": "\${aws_secretsmanager_secret.UserSecret_0463E4F5.arn}",
        "secret_string": "\${jsonencode({\\"username\\" = \\"user-username\\", \\"masterarn\\" = aws_secretsmanager_secret.MasterSecret_A11BF785.arn, \\"password\\" = data.aws_secretsmanager_random_password.UserSecret_RandomPassword_B6C8E79C.random_password})}"
      }
    }
  },
  "terraform": {
    "backend": {
      "http": {
        "address": "http://localhost:3000"
      }
    },
    "required_providers": {
      "aws": {
        "source": "hashicorp/aws",
        "version": "6.52.0"
      }
    }
  }
}"
`;
